# gilion

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  main.py  monthly.csv  pyproject.toml
backend/application/: controller.py
backend/database/: company_data_db_model.py  database_manager.py  database_model.py
backend/models/: company_data_dto.py  simple_company_data_dto.py
backend/tests/: test_database_manager.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppAppBar.tsx  Home.tsx
