[tool.poetry]
name = "gilion"
version = "0.1.0"
description = ""
authors = ["Mark Ekvall <markekv@kth.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pandas = "^2.2.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
